--- a/Code/index.css
+++ b/Code/index.css
@@ -10,14 +10,15 @@
 
 body {
     background-image: url("\\Assets\\bg-image.jpeg");
-    background-size: 100vw 100vh;
+    background-size: 100vw 110vh;
     background-repeat: no-repeat;
     overflow-x: hidden;
 
 }
 
 #nav-bar {
-    background-color: #48c3819e;
+    /* background-color: #48c3819e; */
+    background-color:  rgb(99, 197, 148);
     width: 100%;
     height: 10vh;
     display: flex;
@@ -25,7 +26,7 @@ body {
     align-items: center;
 }
 
-#nav-bar-logo-icons .fa-hospital {
+#nav-bar-logo-icons .fa-circle-h {
     color: white;
     font-size: 24px;
     padding-right: 7px;
@@ -59,9 +60,9 @@ body {
     align-items: center;
     padding-left: 30px;
 
-    background-color: rgba(16, 225, 110, 0.342);
+    background-color: rgba(78, 192, 129, 0.425);
     width: 50%;
-    height: 90vh;
+    height: 100vh;
 
 }
 
@@ -87,7 +88,8 @@ body {
 }
 
 #header-content-section-icons  .fa-stethoscope,.fa-briefcase-medical,.fa-heart-pulse{
-    background-color: rgb(99, 197, 148);
+    /* background-color: rgb(99, 197, 148); */
+    background-color: rgb(55, 189, 122);
     color: white;
     border-radius: 50%;
     padding: 10px;
@@ -109,6 +111,148 @@ body {
     color: rgb(99, 197, 148);
     background-color: white;
 }
+
+#header-after-contact{
+    margin-top: -40px;
+    justify-content: center;
+    align-items: start;
+
+    display: flex;
+    
+
+}
+
+#header-after-contact-01{
+
+    width: 370px;
+    height: 300px;
+    border-radius: 20px;
+    /* background-color: rgb(124, 199, 162); */
+    background-color: rgb(99, 197, 148);
+    padding-left: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    transition: all 1s ease-in-out;
+}
+
+#header-after-contact-01:hover{
+    transform: translateY(-20px);
+}
+
+
+#header-after-contact-02{
+    margin-top: -40px;
+
+    width: 370px;
+    height: 400px;
+    border-radius: 20px;
+    background-color: rgb(55, 189, 122);
+    padding-left: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    transition: all 2s ease-in-out;
+
+
+
+    
+
+
+}
+
+#header-after-contact-02:hover{
+    transform: translateY(30px);
+}
+
+
+
+
+
+
+
+
+#header-after-contact-03{
+
+
+    width: 370px;
+    height: 300px;
+    border-radius: 20px;
+    background-color:rgb(99, 197, 148);
+    padding-left: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    transition: all 1s ease-in-out;
+    
+
+}
+
+#header-after-contact-03:hover{
+    transform: translateY(-20px);
+}
+
+
+
+#header-after-contact-01 .fa-phone{
+    margin-top: 25px;
+    font-size: 25px;
+    color: white;
+
+
+    
+}
+
+#header-after-contact-02 .fa-calendar-days{
+    margin-top: 25px;
+    font-size: 25px;
+    color: white;
+
+
+    
+}
+
+#header-after-contact-03 .fa-clock{
+    margin-top: 25px;
+    font-size: 25px;
+    color: white;
+
+
+    
+}
+
+
+
+#header-after-contact-h1{
+    font-size: x-large;
+
+}
+
+#header-after-contact-para{
+    font-size: large;
+}
+
+#header-after-contact-btn{
+    width: 30%;
+    padding: 10px 0px;
+    border-radius: 15px;
+    background-color: #fff;
+    border: 2px solid rgb(99, 197, 148);
+    cursor: pointer;
+    
+
+}
+
+
+#header-after-contact-btn:hover{
+    border: 1px solid green;
+    background-color: rgb(99, 197, 148);
+    color: #fff;
+}
+
+
+
 
 
 
