--- a/Code/index.css
+++ b/Code/index.css
@@ -14,7 +14,7 @@ html{
 }
 
 body {
-    background-image: url("\\Code\\bg-image.jpeg");
+    background-image: url("\\bg-image.jpeg");
     background-size: 100vw 110vh;
     background-repeat: no-repeat;
     overflow-x: hidden;
@@ -31,7 +31,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-image: linear-gradient(to right,rgba(255, 255, 255, 0.749),rgba(18, 184, 26, 0.566));
+    background-image: linear-gradient(to right,rgba(55, 222, 97, 0.628),rgba(73, 214, 115, 0.619));
 }
 
 
@@ -716,7 +716,7 @@ body {
 @media (max-width : 1024px){
 
     body{
-        background-image: url("\\Code\\bg-image.jpeg");
+        background-image: url("\\bg-image.jpeg");
         background-size: 100vw 550px;
         background-repeat: no-repeat;
         overflow-x: hidden;
